--- a/stack.yaml
+++ b/stack.yaml
@@ -1,4 +1,5 @@
-resolver: nightly-2021-03-31 # ghc-8.10.4
+resolver: nightly-2021-06-19
+  # nightly-2021-03-31 # ghc-8.10.4
 extra-deps:
 - ghc-lib-parser-0.20210601
 ghc-options:
